--- a/Portafolio/Proyectos.html
+++ b/Portafolio/Proyectos.html
@@ -17,6 +17,23 @@
     </nav>
 
     <section id="proyectos">
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dicta, at est sit minima neque tempore, quidem, eveniet cupiditate adipisci laboriosam totam nulla autem ipsa iure quae officiis quo voluptates!
+            </p>
+            <img src="./images/project.jpeg" alt="Imagen cargando">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi minus quos doloribus libero a, officiis nobis dolorum ullam ab soluta voluptatum nesciunt tempore facere atque nemo? Aperiam delectus at neque!
+            </p>
+            <img src="./images/languaje.jpeg" alt="Imagen no generada">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ex suscipit ullam exercitationem hic optio assumenda vel pariatur? Accusamus, ea possimus commodi debitis veniam nihil maiores recusandae nam provident aperiam.
+            </p>
+        </div>
+
+    </section>
+
+    <section id="proyectos">
         <h2>Mis proyectos</h2>
 
         <div class="proyectos-contenedor">
@@ -33,7 +50,7 @@
             </div>
 
             <div class="proyecto">
-                <h3>CafeDeLaLoma</h3>
+                <h3>Cafe de la Loma</h3>
                 <p>Repositorio donde visulizamos la pagina de una cafeteria con sus productos</p>
                 <a href="https://github.com/SneiderLZ16/coffeShop" target="_blank">Ver en GitHub</a>
             </div>
