--- a/Portafolio/acerca.html
+++ b/Portafolio/acerca.html
@@ -29,6 +29,49 @@
         </div>
     </section>
 
+    <section id="acerca">
+        <p>
+            Inicie aprendiendo python, haciendo ejercicios basicos y avanzando a proyectos mas complejos. Después de un tiempo, decidí aprender a html, css y js para poder crear sitios web y aplicaciones web.
+        </p>
+        
+        <section id="lenguajes">
+            <h2>Lenguajes que utilizo</h2>
+            <div class="botones-3d">
+                <div class="btn-lenguaje html" onclick="mostrarInfo(this)">
+                    <span>HTML</span>
+                    <div class="info-lenguaje">
+                        <p>HTML (HyperText Markup Language) estructura el contenido de la web mediante etiquetas.</p>
+                        <img src="./images/html.jpeg" alt="Logo HTML" class="btn-imgs">
+                    </div>
+                </div>
+
+                <div class="btn-lenguaje css" onclick="mostrarInfo(this)">
+                    <span>CSS</s>
+                    <div class="info-lenguaje">
+                        <p>CSS permite aplicar estilos visuales como colores, bordes, animaciones y layouts.</p>
+                        <img src="./images/css.png" alt="CSS logo" class="btn-imgs">
+                    </div>
+                </div>
+
+                <div class="btn-lenguaje js" onclick="mostrarInfo(this)">
+                    <span>JavaScript</span>
+                    <div class="info-lenguaje">
+                        <p>JavaScript agrega interactividad y lógica a las páginas web, como botones dinámicos y validaciones.</p>
+                        <img src="./images/js.png" alt="JS logo" class="btn-imgs">
+                    </div>
+                </div>
+
+                <div class="btn-lenguaje python" onclick="mostrarInfo(this)">
+                    <span>Python</span>
+                    <div class="info-lenguaje">
+                        <p>Lenguaje de programación ampliamente utilizado en las aplicaciones web, el desarrollo de software, la ciencia de datos y el machine learning</p>
+                        <img src="./images/python.png" alt="Python logo" class="btn-imgs">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
     <footer>
         <p>&copy; 2025 Kevin Londoño</p>
         <p>Sígueme en:
@@ -37,5 +80,10 @@
         </p>
     </footer>
 
+    <script>
+        function mostrarInfo(elemento) {
+        elemento.classList.toggle("activo");
+        }
+    </script>
 </body>
 </html>
