--- a/Portafolio/contacto.html
+++ b/Portafolio/contacto.html
@@ -20,10 +20,22 @@
     <h2>Contáctenos</h2>
     <p>Puedes escribirme a: <a href="mailto:sneiderlondono0216@gmail.com">sneiderlondono0216@gmail.com</a></p>
     <p>Teléfono: 322 648 68 66</p>
-    </section>
+    <section id="formulario-contacto">
+    <h3>Formulario de Contacto</h3>
+    <form action="mailto:sneiderlondono0216@gmail.com" method="post" enctype="text/plain">
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre" required><br><br>
 
-    <!-- Pie de página -->
-    <footer>
+        <label for="correo">Correo electrónico:</label><br>
+        <input type="email" id="correo" name="correo" required><br><br>
+
+        <label for="mensaje">Mensaje:</label><br>
+        <textarea id="mensaje" name="mensaje" rows="5" required></textarea><br><br>
+
+        <button type="submit">Enviar</button>
+    </form>
+</section>
+
         <p>&copy; 2025 Kevin Londoño</p>
         <p>Sígueme en:
             <a href="https://www.instagram.com/sneiderlz/" target="_blank">Instagram</a> |
