--- a/Prueba HTML+/Proyectos.html
+++ b/Prueba HTML+/Proyectos.html
@@ -17,17 +17,19 @@
     </nav>
 
     <section id="proyectos">
-        <div id="intro">
-            <p>
-                A continuacion se muestran algunos de los proyectos que he realizado en mi carrera como desarrollador web.
-            </p>
-            <p>
-                Por medio de las pestañas se pueden ver los detalles de cada proyecto, donde tendras acceso al codigo fuente y a la documentacion del mismo.
-            </p>
-            <img src="./images/project.jpeg" alt="Imagen cargando">
-            
-            <img src="./images/languaje.jpeg" alt="Imagen no generada">
-        </div>
+        <div id="intro" class="intro-proyectos">
+    <p>
+        A continuación se muestran algunos de los proyectos que he realizado en mi carrera como desarrollador web.
+    </p>
+    <p>
+        Por medio de las pestañas se pueden ver los detalles de cada proyecto, donde tendrás acceso al código fuente y a la documentación del mismo.
+    </p>
+    <div class="imagenes-horizontal">
+        <img src="./images/project.jpeg" alt="Imagen cargando">
+        <img src="./images/languaje.jpeg" alt="Imagen no generada">
+    </div>
+</div>
+
 
     </section>
 
